add img yoda for best practices

--- a/git/index.html
+++ b/git/index.html
@@ -577,6 +577,7 @@
             <section>
                 <section>
                     <h1>Bonnes pratiques</h1>
+                    <img src="img/yoda.jpg" alt="Yoda" />
                 </section>
                 <section>
                     <h2>Commit efficaces</h2>
