Change Pull request title slide

--- a/git/index.html
+++ b/git/index.html
@@ -538,8 +538,8 @@
 
             <section>
                 <section>
-                    <h1>Pull Request & Code Reviews</h1>
-                    <img src="img/grandma-wtf.jpg" alt="grandma wtf">
+                    <h1>Pull Request & <br> Code Reviews</h1>
+                    <img src="img/grandma.jpg" alt="grandma">
                 </section>
                 <section>
                     <h2>Pull request</h2>
