add --amend info

--- a/git/index.html
+++ b/git/index.html
@@ -411,6 +411,7 @@
                         <li>En local</li>
                         <li>[-m] : ajoute un message (requis !)</li>
                         <li>[-a] : ajoute tous les fichiers modifiés</li>
+                        <li>[--amend] : modifie le dernier commit (message | fichier)</li>
                     </ul>
                     <code>git commit &lt;filename&gt; [&lt;filename&gt;...] [-a|-m|...] [message]</code>
                 </section>                
