add staging zone img

--- a/git/index.html
+++ b/git/index.html
@@ -403,8 +403,10 @@
                         <li>[-p] : Indexation partielle de fichier (hunk/lignes)</li>
                     </ul>
                     <code>git add &lt;filename&gt; [&lt;filename&gt;...]</code>
-                    <br/>
-
+                    <img src="img/git-staging-zone.png" alt="Staging zone" />
+                </section>
+                    
+                <section>
                     <h2>git commit</h2>
                     <p>Versionne le fichier dans le repo</p>
                     <ul>
