--- a/git/index.html
+++ b/git/index.html
@@ -519,20 +519,22 @@
                 </section>
                 <section>
                     <h2>git push</h2>
-                    <p>Pousse un objet local vers un repository</p>
-                    <code>git push &lt;repo&gt; &lt;branch&gt;</code>
+                    <p>Pousse un objet local vers un dépôt</p>
+                    <ul>
+                        <li>[-u] : Pousse la branche (création) dans le dépôt distant</li>
+                    </ul>
+                    <code>git push [-u] &lt;repo&gt; &lt;branch&gt;</code>
                 </section>
                 <section>
                     <h2>git fetch</h2>
                     <p>Récupère les objets et références d'un autre repository</p>
                     <ul>
-                        <li></li>
+                        <li>Mémorise ces changements en tant que locale remote branche et non en les fusionnants</li>
                         <li>Fait uniquement un update de nos données de repo</li>
                         <li>Fait avancer le pointer HEAD du master au même niveau que remote origin/master</li>
                         <li>Le pointer du local master reste au même niveau</li>
-                        <li>Utile lorsque l'on travaille</li>
-                    </ul>
-                    
+                        <li>Utile lorsque nos modifications risquent de créer des conflits, mais qu'on veut quand même consulter les modifs des autres</li>
+                    </ul>                    
                     <code>git fetch git fetch &lt;remote&gt; [&lt;branch&gt;]</code>
                     <p class="footnote"><a href="http://stackoverflow.com/questions/292357/what-are-the-differences-between-git-pull-and-git-fetch#answer-10556826">Explication de StackOverflow</a></p>
                 </section>
