--- a/git/index.html
+++ b/git/index.html
@@ -48,7 +48,7 @@
                         <code>git checkout ...</code>
                     </div>
                     <div class="fragment">
-                        <p>Créer une branch</p>k
+                        <p>Créer une branche</p>
                         <code>git checkout ...</code>
                     </div>
                     <aside class="notes">
