--- a/git/index.html
+++ b/git/index.html
@@ -30,7 +30,7 @@
                         <li>CVS</li>
                         <li>Mercurial</li>
                     </ul>
-                    <p>Créé par Linus Torvalds (linux)</p>
+                    <p>Créé pour Linux par Linus Torvalds</p>
                     <aside class="notes">
                         <p>Git est un outil qui permet de versioner des fichiers. D'autres systèmes similaires
                         existent, on citera par exemple SVN qui était très répandu avant Git, mais aussi CVS ou Mercurial.</p>
@@ -615,7 +615,7 @@
                     <h2>Une fois poussé, ne plus toucher</h2>
                     <ul>
                         <li>Poussé = public : Une modification de l'historique peut mettre qqun en difficulté</li>
-                        <li>Eviter les commit and push</li>
+                        <li>Eviter un push auto après chaque commit</li>
                         <li>Corriger une modification poussée via un commit de bugfix et non via --amend</li>
                     </ul>
                     <aside class="notes">
