separate references in multiple slides

--- a/git/index.html
+++ b/git/index.html
@@ -701,17 +701,29 @@
                 <section>
                     <h1>Références</h1>
                 </section>
+
                 <section>
-                    <h2>Ressources Git</h2>
+                    <h2>Installer Git</h2>
+                    <p>Download git : <a href="http://msysgit.github.io">msysgit.github.io</a></p>
+                </section>
+
+                <section>
+                    <h2>Livre</h2>
+                    <p>Pro Git (html | ebook) : <a href="http://git-scm.com/book/fr/v2">git-scm.com/book/fr/v2</a></p>
+                    <img src="img/pro-git-v2.png" alt="Book Pro Git v2">
+                </section>
+                <section>
+                    <h2>Articles et tutoriels</h2>
                     <ul>
-                        <li>Download git : <a href="http://msysgit.github.io">msysgit.github.io</a></li>
-                        <li>Git book : <a href="http://git-scm.com/book/fr/v1">git-scm.com/book/fr/v1</a></li>
+                        <li>Enfin comprendre git : <a href="https://www.miximum.fr/blog/enfin-comprendre-git/">www.miximum.fr</a></li>
                         <li>Atlassian tutoriel [EN] : <a href="https://www.atlassian.com/git/tutorials/what-is-version-control">www.atlassian.com</a></li>
                         <li>Tuto github [EN] : <a href="https://try.github.io">try.github.io</a></li>
-                        <li>Enfin comprendre git : <a href="https://www.miximum.fr/blog/enfin-comprendre-git/">www.miximum.fr</a></li>
-                        <li>Git Best Practices : <a href="https://sethrobertson.github.io/GitBestPractices/">sethrobertson.github.io</a></li>
+                        <li>Git Best Practices [EN] : <a href="https://sethrobertson.github.io/GitBestPractices/">sethrobertson.github.io</a></li>
                     </ul>
                 </section>
+
+
+
                 <section>
                     <h2>Projets</h2>
                     <p>Metro git</p>
