add chapter git à la VA

--- a/git/index.html
+++ b/git/index.html
@@ -100,6 +100,50 @@
 
             <section>
                 <section>
+                    <h1>Git à la VA</h1>
+                    <img src="img/logo-va.png" class="slide-logo" alt="Vaudoise" />
+                </section>
+                <section>
+                    <h2>Pourquoi migrer vers Git</h2>
+                    <ul>
+                        <li>Avantages cités</li>
+                        <li>Intégration suite Atlassian <br/>(merge auto, release into develop, etc.)</li>
+                        <li>Outils de dev git-ready (IDE, IC, ...)</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Migration vers Git</h2>
+                    <ol>
+                        <li>Projet pilote : Métis</li>
+                        <li>Feedbacks et ajustements</li>
+                        <li>Autres projets au fur et à mesure</li>
+                    </ol>
+                </section>
+
+                <section>
+                    <h2>Déroulement</h2>
+                    <ol>
+                        <li>Installation des serveurs</li>
+                        <li>Migration de dépôt</li>
+                        <li>Liaison avec JIRA, Crucible,...</li>
+                        <li>Développements</li>
+                    </ol>
+                </section>
+
+                <section>
+                    <h2>Ambassadeurs Git</h2>
+                    <ul>
+                        <li>Freyre Jérôme (JFR)</li>
+                        <li>Lerjen Yann (YLE)</li>
+                        <li>Salvalai Fabio (SIO)</li>
+                        <li>Sylvestre David (SDD)</li>
+                    </ul>
+                </section>
+            </section>
+
+            <section>
+                <section>
                     <h1>Philosophie GIT</h1>
                     <img src="img/git-man-head.png" class="slide-logo" alt="Git philosophy"/>
                 </section>
