master as edge/latest version branch

--- a/git/index.html
+++ b/git/index.html
@@ -294,7 +294,7 @@
                 <section>
                     <h2>Master</h2>
                     <ul>
-                        <li>Stable</li>
+                        <li>Stable (version edge/latest)</li>
                         <li>Déployé en PROD</li>
                         <li>Pas de commit direct</li>
                         <li>Merge de release ou hotfix</li>
