develop no dev commit

--- a/git/index.html
+++ b/git/index.html
@@ -296,7 +296,7 @@
                     <ul>
                         <li>Stable (version edge/latest)</li>
                         <li>Déployé en PROD</li>
-                        <li>Pas de commit direct</li>
+                        <li>Pas de commit de développement</li>
                         <li>Merge de release ou hotfix</li>
                     </ul>
                 </section>
